--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,5 +7,5 @@
         <!-- <li><a href="#" class="icon solid fa-rss"><span class="label">RSS</span></a></li> -->
         <li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
     </ul>
-    <p class="copyright">&copy;{{site.name}}. Design by <a href="willhoffer.com">Will Hoffer</a> adapted from work of <a href="http://html5up.net">HTML5 UP</a>. Images: <a href="http://unsplash.com">Unsplash</a>.</p>
+    <p class="copyright">Content &copy;{{site.name}}. Website made by <a href="willhoffer.com">Will Hoffer</a>.</p>
 </section>
