--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -39,10 +39,10 @@
         </section>
 
     <!-- Actions -->
-        <!-- <section>
+        <section>
             <ul class="actions stacked">
                 <li><a href="#" class="button large fit">Log In</a></li>
             </ul>
-        </section> -->
+        </section>
 
 </section>
