--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,7 +3,7 @@
 
     <!-- Intro -->
         <section id="intro">
-            <a href="#" class="logo"><img src="/images/logo.jpg" alt="" /></a>
+            <a href="#" class="avatar"><img src="/images/avatar.jpg" alt="" /></a>
             <header>
                 <h2>{{site.title}}</h2>
                 <p>{{site.email}}</p>
