--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ layout: default
         </div>
         <div class="meta">
             <time class="published" datetime="">{{page.date | date: "%D" }}</time>
-            <a href="#" class="author"><span class="name">{{site.name}}</span><img src="images/avatar.jpg" alt="" /></a>
+            <a href="#" class="author"><span class="name">{{site.name}}</span><img src="/images/avatar.jpg" alt="" /></a>
         </div>
     </header>
     {{ content }}
