--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,10 @@
 <!-- Footer -->
 <section id="footer">
     <ul class="icons">
-        <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+        <!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
         <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-        <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+        <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
+        <li><a href="https://www.linkedin.com/in/michaeljhoffer/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
         <!-- <li><a href="#" class="icon solid fa-rss"><span class="label">RSS</span></a></li> -->
         <li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
     </ul>
