--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,5 +8,5 @@
         <!-- <li><a href="#" class="icon solid fa-rss"><span class="label">RSS</span></a></li> -->
         <li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
     </ul>
-    <p class="copyright">Content &copy;{{site.name}}. Website made by <a href="willhoffer.com">Will Hoffer</a>.</p>
+    <p class="copyright">&copy;{{site.name}}. Website made by <a href="willhoffer.com">Will Hoffer</a>.</p>
 </section>
